# stm32wb-pac

./: .gitignore  Cargo.toml
src/: adc.rs  aes1.rs  aes2.rs  comp.rs  crs.rs  dbgmcu.rs  dma1.rs  dmamux1.rs  exti.rs  flash.rs  gpiob.rs  hsem.rs  ipcc.rs  lib.rs  lptim1.rs  pka.rs  pwr.rs  rcc.rs  rtc.rs  sai1.rs  syscfg.rs  tim1.rs  tim16.rs  tim17.rs  tim2.rs  tsc.rs  usart1.rs  usb.rs
src/adc/: awd2cr.rs  awd3cr.rs  calfact.rs  ccr.rs  cfgr.rs  cfgr2.rs  cr.rs  difsel.rs  dr.rs  ier.rs  isr.rs  jdr1.rs  jdr2.rs  jdr3.rs  jdr4.rs  jsqr.rs  ofr1.rs  ofr2.rs  ofr3.rs  ofr4.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sqr4.rs  tr1.rs  tr2.rs  tr3.rs
src/aes1/: cr.rs  hwcfr.rs  ipidr.rs  keyr5.rs  sidr.rs  susp0r.rs  susp1r.rs  susp4r.rs  susp6r.rs  susp7r.rs  verr.rs
src/aes2/: keyr4.rs  keyr6.rs  keyr7.rs  sr.rs  susp2r.rs  susp3r.rs  susp5r.rs
src/comp/: comp1_csr.rs  comp2_csr.rs
src/crc/: cr.rs  idr.rs
src/crs/: cfgr.rs  cr.rs  icr.rs  isr.rs
src/dbgmcu/: apb1fzr1.rs  apb2fzr.rs  c2ap_b1fzr1.rs  c2apb1fzr2.rs  c2apb2fzr.rs  cr.rs
src/dmamux1/: c0cr.rs  c10cr.rs  c11cr.rs  c12cr.rs  c13cr.rs  c1cr.rs  c2cr.rs  c3cr.rs  c4cr.rs  c5cr.rs  c6cr.rs  c7cr.rs  c8cr.rs  c9cr.rs  cfr.rs  csr.rs  rg0cr.rs  rg1cr.rs  rg2cr.rs  rg3cr.rs  rgcfr.rs  rgsr.rs
src/exti/: c1emr1.rs  c1emr2.rs  c1imr1.rs  c1imr2.rs  c2emr1.rs  c2emr2.rs  c2imr1.rs  c2imr2.rs  ftsr1.rs  ftsr2.rs  hwcfgr1.rs  hwcfgr2.rs  hwcfgr3.rs  hwcfgr4.rs  hwcfgr5.rs  hwcfgr6.rs  hwcfgr7.rs  ipidr.rs  pr1.rs  pr2.rs  rtsr1.rs  rtsr2.rs  sidr.rs  swier1.rs  swier2.rs  (+1 more)
svd/: STM32WBxx_CM4.svd
(+306 files in other folders)
