[package]
name = "stm32wb-pac"
version = "0.2.2"
authors = ["Evgenii P. <eupn@protonmail.com>"]
edition = "2018"
description = "A peripheral access crate for STM32WB Cortex-M4F BLE/IEEE 802.15.4"
repository = "https://github.com/eupn/stm32wb-pac"
license = "MIT"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.6"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]
